expand/collapse behavior fixed

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Varela Round', sans-serif;
   background-color: #355C7D;
 }
 
